<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="kz.motorik.SignIn">

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent"
            android:layout_gravity="center"
            android:layout_marginTop="37dp"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true">

        <EditText
                android:layout_marginTop="15dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/PasswordField" android:hint="@string/Password"/>
        <EditText

                android:layout_marginTop="15dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/EmailField" tools:ignore="LabelFor" android:hint="@string/Email"/>
        <Button
                android:width="170dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_column="1"
                android:layout_row="2"
                android:text="@string/Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/register"/>
        <Button

                android:width="170dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/SignIn"
                android:layout_width="170dp"
                android:layout_height="wrap_content" android:id="@+id/signIn"/>
    </GridLayout>
</RelativeLayout>
