<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="kz.motorik.StartActivity">

    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp" tools:ignore="UselessParent" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

        <Button
                android:text="@string/Master"
                android:id="@+id/MasterButton" android:layout_width="125dp" android:layout_height="wrap_content"
                android:layout_row="2" android:layout_column="2"
                android:layout_marginTop="0dp"
        />
        <TextView
                android:text="@string/WhoAreYou"
                android:layout_width="125dp"
                android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_column="1"
                android:layout_row="1" android:layout_columnSpan="2"
                android:gravity="fill_horizontal" android:layout_gravity="center_horizontal|fill_horizontal"
                android:typeface="serif"
                android:fontFamily="sans-serif" android:textSize="20sp" android:lineSpacingExtra="8sp"
                android:textAlignment="center" android:textAllCaps="false" android:textStyle="normal|italic"
                android:layout_marginBottom="10dp"/>
        <Button
                android:layout_height="wrap_content" android:id="@+id/ClientButton" android:text="@string/Client"
                android:layout_width="125dp" android:layout_marginRight="20dp" android:layout_row="2"
                android:layout_column="1"
                android:layout_marginEnd="0dp" tools:ignore="RtlHardcoded"/>
    </GridLayout>
</RelativeLayout>
